<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gaviao_negro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgGav"
                android:layout_width="0"
                android:layout_height="132dp"
                android:layout_weight="1"
                android:contentDescription="@string/imgGav"
                app:srcCompat="@drawable/gaviao_negro" />

            <LinearLayout
                android:layout_width="246dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHeroiGav"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/txtHeroiGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtNomeGav"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:text="@string/txtNomeGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtEspGav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEspGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtHab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHab"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtHabGav"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            tools:text="@string/txtHabGav" />

        <TextView
            android:id="@+id/txtVul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtVul"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtVulArc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/txtVulGav"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/txtEquip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEquip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCintoGav"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtCintoGav"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/txtAsasGav"
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtAsasGav"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCintoGav2"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtCintoGav2" />

            <TextView
                android:id="@+id/txtAsasGav2"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtAsasGav2" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNivGav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNivGav"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAnt" />

            <TextView
                android:id="@+id/branco"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branco" />

            <Button
                android:id="@+id/btnprox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnprox" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>