<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aquaman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0"
                android:layout_height="132dp"
                android:layout_weight="1"
                android:contentDescription="@string/imgAqu"
                app:srcCompat="@drawable/aquaman" />

            <LinearLayout
                android:layout_width="246dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHeroiGav"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/txtHeroiGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtNomeGav"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:text="@string/txtNomeGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtEspGav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEspGav"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtHab4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHab"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtHabAqu"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/txtHabAqu" />

        <TextView
            android:id="@+id/txtVul3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtVul"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtVulAqu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/txtVulAqu" />

        <TextView
            android:id="@+id/txtEquip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEquip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTridAqu"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTridAqu"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/txtConchaAqu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtConchaAqu"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTridAqu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTridAqu2" />

            <TextView
                android:id="@+id/txtConchaAqu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtConchaAqu2" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNivAqu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNivAqu"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAnt" />

            <TextView
                android:id="@+id/branco"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branco" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>