<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".arqueiro_verde">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgArc"
                android:layout_width="133dp"
                android:layout_height="132dp"
                android:contentDescription="@string/imgArc"
                app:srcCompat="@drawable/arqueiro_verde" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHeroiArc"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/txtHeroiArc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtNomeArc"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:text="@string/txtNomeArc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/txtEspArc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEspArc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtHab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHab"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtHabArc"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/txtHabArc"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/txtVul"
            android:layout_width="163dp"
            android:layout_height="18dp"
            android:text="@string/txtVul"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtVulArc"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:text="@string/txtVulArc"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/txtEquip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEquip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtArcoArc"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtArcoArc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/txtTrajeArc"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTrajeArc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtArcoArc2"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtArcoArc2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/txtTrajeArc2"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTrajeArc2" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtNivArc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNivArc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/branco"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branco" />

            <Button
                android:id="@+id/btnprox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnprox" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>